# IStudio-Lang

./: .gitignore  Terminals.csv  Terminals.xlsx  makefile  temp
Documentation/: Classes.xlsx  Keywords.xlsx
Documentation/Book/: Datatypes.docx  Introduction.docx
Documentation/Class/: SystemLog.xlsx  TCPClient.xlsx  TCPServer.xlsx
change/include/: grammar.hpp  handleRule.hpp  logger.hpp  nonterminal.hpp  operator.hpp  options.hpp  parser.hpp  rightassociate.hpp  rule.hpp  terminal.hpp  types.hpp
change/source/: main.cpp  terminal.cpp
change/test/: t1.iFunction
include/: DAG.hpp  IdentifierTable.hpp  Parser.hpp  Rules.hpp  flowControl.hpp  grammar.hpp  handleRule.hpp  logger.hpp  nonterminal.hpp  options.hpp  parser.hpp  rightassociate.hpp  rule.hpp  rules.hpp  symbolTable.hpp  terminal.hpp  types.hpp
preprocess/: csv.hpp  grammers  intermediate  logger.hpp  main.cpp  makefile  options.hpp  types.hpp
preprocess/output/: main.cpp  terminalList.hpp
preprocess/source/: foot.cpp  header.cpp  (+1 more)
source/: Rules.cpp  main.cpp  nonterminal.cpp  rule.cpp  terminal.cpp
stageI/: CMakeLists.txt  makefile  temp.cpp
stageI/include/: csv.hpp  grammar.hpp  json.hpp  nonterminal.hpp  options.hpp  rightassociate.hpp  rule.hpp  rules.hpp  shared_ptr.hpp  symbolTable.hpp  terminal.hpp  types.hpp
stageI/output/: nonTerminal.txt
stageI/source/: main.cpp  rule.cpp  shared_ptr.cpp  terminal.cpp
stageI/test/: myrules.hpp  myrules.hpp.gch  nonTerminal  nttype.hpp  terminal  terminalList.hpp
stageIII/: makefile
test/: t1.is
tool/: g++.bat  gcc.bat  git.bat  make.bat
(+36 files in other folders)
